# sysmgrt

./: Makefile.am  Makefile.in  README  ZkQuery.wsdl  apache_gsoap.h  config.h.in  configure  configure.ac  dbhlp.c  dbhlp.h  dboper.c  dboper.h  gsoap.conf  heartBeatCheck.c  heartBeatCheck.h  mod.c  mod_gsoap.c  soapC.c  soapClient.c  soapH.h  soapServer.c  soapStub.h  stdsoap2.c  sysmgrt.docx  test.c  zkcfgimpl.c  zkq.wsdl  zkqimpl.c  zkreg.nsmap  zkreg.wsdl  zkreg.xsd  zkregimpl.c  zonekey_sysmgrt.h
sysmgrt.net/: README  sysmgrt.net.sln
sysmgrt.net/clientMgrt/: FormMain.Designer.cs  FormMain.cs  Program.cs  clientMgrt.csproj  zkq.cs  zkreg.cs
sysmgrt.net/clientMgrt/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
sysmgrt.net/sysmgrt.net/: Program.cs  sysmgrt.net.csproj  sysmgrt.net.sln  zkcfg.cs  zkq.cs  zkquery.cs  zkreg.cs
sysmgrt.net/sysmgrt.net/Properties/: AssemblyInfo.cs
sysmgrt.net/sysmgrt.net/clientControl/: MainWindow.cs  Program.cs  clientControl.csproj
sysmgrt.net/sysmgrt_win32/: sysmgrt_win32.sln  sysmgrt_win32.vcxproj
sysmgrt.net/sysmgrt_win32/test_proxy/: test.cpp  test_proxy.vcxproj
sysmgrt.net/sysmgrt_win32/zk_sysmgrt_proxy/: cfgimpl.c  commimpl.c  exports.def  impl.h  list.h  main.c  mutex.c  mutex.h  queryimpl.c  regimpl.c  semaphore.c  semaphore.h  thread.c  thread.h  zk_sysmgrt_common.h  zk_sysmgrt_config.h  zk_sysmgrt_proxy.h  zk_sysmgrt_query.h  (+2 more)
zonekey_sysmgrt/: main.c  zonekey_sysmgrt.1
zonekey_sysmgrt.xcodeproj/: project.pbxproj
zonekey_sysmgrt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+6 files in other folders)
